2003-09-20  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regcomp.c (peek_token): Don't look back for ( or |
	to check whether to treat a caret as special.  It fails
	for the (extended) regex \(^.
	(parse, parse_reg_exp): Pass RE_CARET_ANCHORS_HERE to fetch_token.
	* posix/regex.h: Define RE_CARET_ANCHORS_HERE.

	* posix/regexec.c: Check out of bounds value before shifting.

	* posix/regex_internal.h: Define __attribute for non-gcc.

2003-09-22  Jakub Jelinek  <jakub@redhat.com>

	* include/atomic.h (atomic_compare_and_exchange_val_rel,
	atomic_compare_and_exchange_bool_rel): Swap oldval/newval arguments
	to avoid confusion.

	* sysdeps/unix/opendir.c: Include string.h.

2003-09-22  Ulrich Drepper  <drepper@redhat.com>

	* timezone/zdump.c: Update from tzcode2003c.
	* timezone/zic.c: Likewise.
	* timezone/leapseconds: Update from tzdata2003c.

2003-09-19  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile ($(objpfx)librtld.os): Create link map also for
	final build to ease quality control.

	* sysdeps/unix/sysv/linux/getcwd.c (__getcwd): If compiled for
	ld.so, don't include NULL buffer pointer handling.

2003-09-19  Jakub Jelinek  <jakub@redhat.com>

	* dlfcn/dlopen.c (dlopen): Add static_link_warning.

2003-09-18  Jakub Jelinek  <jakub@redhat.com>

	* libio/memstream.c (open_memstream): Use _IO_init instead of
	_IO_old_init.

2003-09-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/wordexp.c (eval_expr_val): Use strtol since we
	have to recognize octal and hexadecimal numbers as well.  Simplify
	function, signs are handled in strtol.
	* posix/wordexp-test.c: Add tests for octal and hexadecimal
	numbers in arithmetic expressions.

2003-09-17  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile (distribute): Add tst-alignmod.c.
	(tests): Add tst-align.
	(modules-names): Add tst-alignmod.
	(CFLAGS-tst-align.c, CFLAGS-tst-alignmod.c): Add
	$(stack-align-test-flags).
	($(objpfx)tst-align): Depend on libdl.